--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,3 +4,16 @@ div {
     background: blue;
   }
 }
+
+::placeholder {
+  color: gray;
+}
+
+.image {
+  background-image: url(image@1x.png);
+}
+@media (min-resolution: 2dppx) {
+  .image {
+    background-image: url(image@2x.png);
+  }
+}
